--- a/1.1_Unidadesdemedidas/estilos.css
+++ b/1.1_Unidadesdemedidas/estilos.css
@@ -2,42 +2,44 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 10px;
 }
 
+/* 
 body{
     font-family: Arial;
     background: #f2f2f2;
     font-size: 20px;
     height: 600px;
-}
-
+} */
+/* 
 
 .opinion{
-    font-size: 2em;
+    font-size: 2em; */
     /* 2*20 = 40px */
-    padding: 1em;
+    /* padding: 1em; */
     /* 1*40 = 40px */
-    width: 70%;
+    /* width: 70%;
     margin: 40px auto;
     box-shadow: 8px 8px 16px rgba(0, 0, 0, .5);
-}
+} */
 
 
-.title{
+/* .title{
     font-size: 1em;
 }
 
 
 .text{
     font-size: 20px ;
-}
+} */
 
 /* 
 viewport width vw
 viewport height vh
 */
 
-.container{
+/* .container{ */
     /* max-width: 400px;
     max-height: 400px;
     min-width: 200px;
@@ -45,14 +47,19 @@ viewport height vh
     /* width: 50%; */
     /* height: 80%; */
     /* height: 1200px; */
-    background: steelblue;
+    /* background: steelblue;
     width: 100vw;
-    height: 100vh;
+    height: 100vh; */
     /* margin: 30px auto; */
-}
+/* }
 
 .children{
     width: 100%;
     height: 50%;
     background: crimson;
-}
+} */
+
+/* 
+.h1 h1{
+    font-size: 1.2rem;
+} */
